k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel

spec:
  replicas: 2

  selector:
    matchLabels:
      app: laravel

  template:
    metadata:
      labels:
        app: laravel

    spec:
      containers:

        - name: laravel

          image: ghcr.io/justeaurel/voyages-scolaires-aurelien-jonathan:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
