k8s/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mariadb

spec:
  serviceName: mariadb

  replicas: 1

  selector:
    matchLabels:
      app: mariadb

  template:
    metadata:
      labels:
        app: mariadb

    spec:
      containers:

        - name: mariadb

          image: mariadb:11

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql

  volumeClaimTemplates:

    - metadata:
        name: mariadb-storage

      spec:

        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 2Gi
