k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb

spec:
  selector:
    app: mariadb

  ports:
    - port: 3306
      targetPort: 3306
